[package]
name = "tock"
version = "0.1.0"
authors = ["Abin Simon <abinsimon10@gmail.com>"]
edition = "2018"

[features]
default = ["termion"]

[dependencies]
failure = "0.1"
rand = "0.7.0"
tui = "0.5"
reqwest = "0.9.19"
termion = { version = "1.5", optional = true }
serde = "1.0.98"
serde_json = "1.0"
